Worked with Leif trying to fix overlaps of cards

--- a/assets/styleportfolio.css
+++ b/assets/styleportfolio.css
@@ -56,9 +56,5 @@ h1 {
 
 
 }
-.card-deck{
-  margin: auto;
-  align-items: center;
-  
-}
+
 
